[package]
name = "deluge-rpc-api"
version = "0.1.0"
edition = "2021"
authors = ["N9199 <N9199@users.noreply.github.com>"]
documentation = "https://docs.rs/deluge-rpc-api"
repository = "https://github.com/N9199/deluge-rpc-api"
readme = "README.md"
description = "(WIP) A Rust API for Deluge"
license = "AGPL-3.0-or-later"
exclude = [
    ".github/"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
lazy_static = "1.4.0"
log = "0.4.16"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json", "cookies", "gzip"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"

[features]
